# SharedLibWithRPATHCMakeExample

./: .gitignore  README.md
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  console.cpp  console.h
